<resources>
    <string name="app_name">JavaKotlinPracticals</string>
    <string name="HI">Sign up and get started</string>
    <string name="shortMsg">Sign up and get started</string>
    <string name="welcomeMsg">Welcome</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="select_gender">Select Gender</string>
    <string name="checkBox1">Java</string>
    <string name="checkBox2">Kotlin</string>
    <string name="checkBox3">Swift</string>
    <string name="checkBox4">ReactNative</string>
    <string name="outlineButton">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="i_accept_terms_and_conditions">I accept terms and conditions</string>
    <string name="ripple_with_border">Ripple With Border</string>
    <string name="ripple_without_border">Ripple Without Border</string>
    <string name="custom_ripple_with_border">Custom Ripple With Border</string>
    <string name="custom_ripple_without_border">Custom Ripple Without Border</string>
    <string name="simple_form_using_ui_widgets">Form Using UI Widgets</string>
    <string name="form_using_material_components">Form Using MDC</string>
    <string name="button_with_ripple_effects">Ripple Effects</string>
    <string name="simple_list_view">Simple List View</string>
    <string name="simple_list_view_with_default_style">Simple List View With Default Style</string>
    <string name="simple_list_view_with_custom_style">Simple List View with Custom Style</string>
    <string name="custom_list_view">Custom List View</string>
    <string name="recyclerview">Recyclerview With CheckBox</string>
    <string name="straggered_grid_layout">Straggered Grid Layout</string>
    <string name="straggeredgridlayout">Straggered Grid Layout</string>
    <string name="subtitle">subtitle</string>
    <string name="facebook">FACEBOOK</string>
    <string name="facebook_home">facebook</string>
    <string name="todo">TODO</string>
    <string name="write_something_here">Write Something Here</string>
    <string name="hi">HI</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="create_an_acoount_to_get_all_features">Create an acoount to get all features</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_country">Select Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="i_accept_all_the_terms_and_conditions">I accept all the terms and conditions</string>
    <string name="create">Create</string>
    <string-array name="countries">
        <item>India</item>
        <item>USA</item>
        <item>UK</item>
        <item>Canada</item>
        <item>Itli</item>
        <item>Span</item>
    </string-array>
    <string name="relative_layout">Relative Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="city">City</string>
    <string name="hello_blank_fragment">Hello Calls Fragment</string>
    <string name="chats">CHATS</string>
    <string name="status">STATUS</string>
    <string name="calls">Calls</string>
    <string name="done">Done</string>
    <string name="my_dashboard">My DashBoard</string>
    <string name="cart">CART</string>
    <string name="street2">Street2</string>
    <string name="street1">Street!</string>
    <string name="payment">Payment</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="address">ADDRESS</string>
    <string name="hello_chats_fragment">Hello Chats Fragment</string>
    <string name="hello_status_fragment">Hello Status Fragment</string>
    <string name="hello_frame_two">Hello Frame Two</string>
    <string name="hello_frame_one">Hello Frame One</string>
    <string name="first">FIRST</string>
    <string name="second">SECond</string>
    <string name="ui_wigets_b">UI Wigets(B)</string>
    <string name="ui_wigets_a">UI Wigets(A)</string>
    <string name="merge_and_include_tag">Merge And Include Tag</string>
    <string name="title_activity_merge_and_include">MergeAndInclude</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="widgets">Widgets</string>
    <string name="shampoo">Shampoo</string>
    <string name="_70_00">70.00</string>
    <string name="conditioner">Conditioner</string>
    <string name="_100_00">100.00</string>
    <string name="total">Total</string>
    <string name="_170">170</string>
    <string name="textview">TextView</string>
    <string name="button_one">Button One</string>
    <string name="button_two">Button Two</string>
    <string name="load_fragment">Load Fragment</string>
    <string name="ui_widgets_c">UI Widgets(C)</string>
    <string name="ui_widgets_d">UI Widgets(D)</string>
    <string name="activity_life_cycle">Activity Life Cycle</string>
    <string name="fragment_life_cycle">Fragment Life Cycle</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="reterieve_data_from_sub_activity">Reterieve Data From Sub Activity</string>
    <string name="click">Click</string>
    <string name="default_message">Default Message</string>
    <string name="getmessage">GetMessage</string>
    <string name="enter_the_message">Enter The Message</string>
    <string name="submit">Submit</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="intent">Intent</string>
    <string name="fragment">Fragment</string>
    <string name="hello_fragment_two">Hello Fragment Two</string>
    <string name="hello_fragment_one">Hello Fragment One</string>
    <string name="exercise_1">Exercise 1</string>
    <string name="gallery">Gallery</string>
    <string name="send_msg">Send Msg</string>
    <string name="view_msg">View Msg</string>
    <string name="gallery_fragment">Gallery Fragment</string>
    <string name="add_message">Add Message</string>
    <string name="view_message">View Message</string>
    <string name="exercise_2">Exercise 2</string>
    <string name="exercise_3">Exercise 3</string>
    <string name="enter_message">Enter Message</string>
    <string name="exercise_4">Exercise 4</string>
    <string name="enter_the_time_in_seconds">Enter the time in seconds</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="select_time">Select Time</string>
    <string name="pending_intent">Pending Intent</string>
    <string name="enter_time_second">Enter time second</string>
    <string name="intent_filter">Intent Filter</string>
    <string name="view">View</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="email_id">Email Id</string>
    <string name="email_sent_using_intent_filter">Email Sent Using Intent Filter</string>
    <string name="viewpager">ViewPager</string>
    <string name="recents">Recents</string>
    <string name="myfavourites">My Favourites</string>
    <string name="expandable_list_veiw">Expandable List Veiw</string>
    <string name="title">title</string>
    <string name="main_title">Main Title</string>
    <string name="expandablerecyclerview">Nested RecyclerView</string>
    <string name="expandable_recycler_view">Expandable Recycler View</string>
    <string name="bottom_navigation_bar">Bottom Navigation Bar</string>
    <string name="exercise">Exercise</string>
    <string name="nested_recycler_view">Nested Recycler View</string>
    <string name="search">Search</string>
    <string name="my_profile">My Profile</string>
    <string name="login">Login</string>
    <string name="android_architecture">Android Architecture</string>
    <string name="mvc">MVC</string>
    <string name="mvp">MVP</string>
    <string name="mvvm">MVVM</string>
    <string name="inverse_binding">Inverse Binding</string>
    <string name="plus">+</string>
    <string name="viewmodelfactory">ViewModelFactory</string>
    <string name="permission">Permission</string>
    <string name="permission_demo_one">Permission Demo One</string>
    <string name="location_permission">Location Permission</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="granted_msg">Permission Granted!!</string>
    <string name="external_read">External Read</string>
    <string name="multiple_permission">Multiple Permission</string>
    <string name="permission_demo_two">Permission Demo Two</string>
    <string name="image_from_gallery">Image From Gallery</string>
    <string name="image_from_camera">Image From Camera</string>
    <string name="save_to_gallery">Save To Gallery</string>
    <string name="navigationview">NavigationView</string>
    <string name="hello">Hello</string>
    <string name="aparna_tati">Aparna Tati</string>
    <string name="aparnatati123_gmail_com">aparnatati123@gmail.com</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="settings">Settings</string>
    <string name="message">Message</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="design_support">Design Support</string>
    <string name="permission_model">Permission Model</string>
</resources>