<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />

    <item android:title = "@string/profile">

        <menu>

            <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile"/>

            <item
                android:id="@+id/nav_lock"
                android:icon="@drawable/ic_baseline_lock_24"
                android:title="@string/forgot_password" />

        </menu>

    </item>

    <item android:title = "@string/settings">

        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_baseline_chat_bubble_24"
                android:title="@string/message" />
        </menu>

    </item>

    <item android:title = "@string/settings">

        <menu>
            <item
                android:id="@+id/nav_settings1"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_chat1"
                android:icon="@drawable/ic_baseline_chat_bubble_24"
                android:title="@string/message" />
        </menu>

    </item>

</menu>