<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context="uiwidgets.LayoutsMain">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/constraint_layout"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/constraint_layout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/linear_layout"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/linear_layout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/relative_layout"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/relative_layout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/table_layout"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/table_layout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tab_layout"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/tab_layout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/listview"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/list_view"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gridview"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/grid_view"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/framelayout"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/frame_layout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_10sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mergeinclude"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/merge_and_include_tag"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_10sdp" />

</LinearLayout>