<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="uiwidgets.RippleEffect">

    <ImageButton
        android:id="@+id/arrow_ripple"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/ic_sharp_keyboard_backspace_24"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:focusable="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/ripple_with_border"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp" />

    <TextView
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/ripple_without_border"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp" />

    <TextView
        android:layout_width="@dimen/_250sdp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/custom_bordered_ripple"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/custom_ripple_with_border"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp" />

    <TextView
        android:layout_width="@dimen/_250sdp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/custom_borderless_ripple"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/custom_ripple_without_border"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp" />

</LinearLayout>